GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.24alpha8 :
    
        - Now subprocesses launched through the overwrite_jobticket directive
          can also output 'CANCEL', to represent the user's own choice to
          cancel the print job.
          
    - 1.24alpha7 :
     
        - pkbanner now handles new print limiting modes correctly.
        
        - The cupspykota backend wrapper now accepts to be interrupted
          with a kill -INT. This causes an immediate and clean abort
          of the current print job.
          
        - Matt Hyclak contributed the possibility to store the printing
          history in a MySQL database. See the contributed/ directory
          for details.
          
        - Added 2006 to the copyright's years.
        
    - 1.24alpha6 :
    
        - Fixed internal SNMP and PJL handling code for very fast
          printers : PyKota didn't see them going from 'idle'
          to 'printing' to 'idle' again.
          
        - Now waitprinter.sh accepts SNMP version number and 
          community name as arguments, thanks to Brandon
          Holbrook.
          
        - Now command line errors and Ctrl+C repectively cause
          PyKota commands to exit with status -2 and -3.
          
    - 1.24alpha5 :
    
        - All command line tools now accept -A | --arguments filename.args
          as a way to bypass the shell's maximal command line size :
          just put each argument on a line by itself in a file, and
          pass the file's name as the -A | --arguments command line
          option's argument. For now this won't be documented in
          commands' helps.
          